--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.6",
     "@types/passport-jwt": "^3.0.3",
+    "@types/puppeteer": "^3.0.1",
     "@types/ramda": "^0.27.6",
     "@types/supertest": "^2.0.9",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
@@ -60,6 +61,7 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.2.1",
     "prettier": "^2.0.5",
+    "puppeteer": "^4.0.1",
     "ramda": "^0.27.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
