--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,21 +1,25 @@
 {
-   "type": "postgres",
-   "host": "localhost",
-   "port": 3306,
-   "username": "cv_user",
-   "password": "cv_password",
-   "database": "cv_db",
-   "synchronize": true,
-   "logging": false,
-   "entities": [
-      "src/**/*.entity.ts"
-   ],
-   "migrations": [
-      "src/database/migration/**/*.ts"
-   ],
-   "subscribers": [
-      "src/database/subscriber/**/*.ts"
-   ],
-  "seeds": ["src/database/seeds/**/*{.ts,.js}"],
-  "factories": ["src/**/*.factory.ts"]
+  "type": "postgres",
+  "host": "localhost",
+  "port": 5432,
+  "username": "cv_user",
+  "password": "cv_password",
+  "database": "cv_db",
+  "synchronize": true,
+  "logging": false,
+  "entities": [
+     "src/**/*.entity.ts"
+  ],
+  "migrations": [
+     "database/migration/**/*.ts"
+  ],
+  "subscribers": [
+     "src/**/*.subscriber.ts"
+  ],
+  "seeds": [
+    "database/seeds/**/*.ts"
+  ],
+  "factories": [
+    "src/**/*.factory.ts"
+  ]
 }
