--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
+    "google-auth-library": "^6.0.4",
     "jest": "^26.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
