--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.6",
+    "@types/nunjucks": "^3.1.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/puppeteer": "^3.0.1",
     "@types/ramda": "^0.27.6",
@@ -55,12 +56,14 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "config": "^3.3.1",
+    "docx-templates": "^4.3.0",
     "elastic-builder": "^2.7.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "google-auth-library": "^6.0.4",
     "jest": "^26.0.1",
+    "nunjucks": "^3.2.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^8.2.1",
