--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
+    "@types/luxon": "^1.25.0",
     "@types/nunjucks": "^3.1.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/puppeteer": "^3.0.2",
@@ -64,6 +65,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "google-auth-library": "^6.1.0",
     "jest": "^26.4.2",
+    "luxon": "^1.25.0",
     "nunjucks": "^3.2.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
