--- a/config/default.yml
+++ b/config/default.yml
@@ -8,9 +8,11 @@ db:
   logging: false
 
 redis:
+  host: 'localhost'
   port: 6379
 
 elasticsearch:
+  host: 'http://localhost'
   port: 9200
 
 jwt:
