--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main",
     "lint": "eslint --ignore-pattern \"*.spec.ts\" \"{src,apps,libs,test}/**/*.ts\"",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
